# cv-robot

./: 1_1_Beginner_level.ipynb  Beginner_level.ipynb  README.md  requirements.txt
mina/src/ai/cv/: CMakeLists.txt  package.xml  setup.py
mina/src/ai/cv/launch/: computer_vision.launch
mina/src/ai/cv/nodes/: cv_node.py  cv_node_script.py  object_detection_node.py
mina/src/ai/cv/nodes/face-recognition/: README.md  main.py  requirements.txt
mina/src/ai/cv/nodes/face_recognition/: Makefile  README.md  pyproject.toml  streamlit_app.py  test.py
mina/src/ai/cv/nodes/face_recognition/docs/: Makefile  conf.py  index.rst  make.bat
mina/src/ai/cv/nodes/face_recognition/notebooks/: Azure_cognitive_service.ipynb
mina/src/ai/cv/nodes/face_recognition/src/data/: make_dataset.py
mina/src/ai/cv/nodes/face_recognition/src/models/: __init__.py  predict_model.py  train_model.py
mina/src/ai/cv/nodes/object_detection/: Makefile  README.md
mina/src/ai/cv/nodes/object_detection/docs/: Makefile  conf.py  index.rst  make.bat
mina/src/ai/cv/nodes/object_detection/src/models/: classify_video.py
mina/src/ai/nlp/chatbot/: Voice_bot.py  config.yml  pyproject.toml
mina/src/ai/rl/: CMakeLists.txt  package.xml  setup.py
mina/src/ai/rl/launch/: turtlebot3_dqn_stage_1.launch
mina/src/ai/rl/nodes/: turtlebot3_dqn_stage_1  turtlebot3_dqn_stage_2
mina/src/ai/rl/save_model/: stage_1_10.h5  stage_1_100.h5  stage_1_110.h5  stage_1_20.h5  stage_1_30.h5  stage_1_40.h5  stage_1_50.h5  stage_1_60.h5  stage_1_70.h5  stage_1_80.h5  stage_1_90.h5  stage_2_10.h5  stage_2_20.h5
mina/src/ai/rl/src/machine_learning/: environment_stage_1.py  environment_stage_2.py  environment_stage_3.py  environment_stage_4.py
mina/src/robot/base_rover/: CMakeLists.txt  package.xml
mina/src/robot/base_rover/config/: joint_names_base_rover.yaml
mina/src/robot/base_rover/launch/: base_rover.launch  base_rover_rviz.launch  display.launch  gazebo.launch
mina/src/robot/base_rover/meshes/: camera.STL  caster_1.STL  caster_2.STL  left_wheel.STL  right_wheel.STL
mina/src/robot/base_rover/rviz/: sim.rviz
mina/src/robot/base_rover/urdf/: base_rover.csv  base_rover.gazebo.xacro  base_rover.urdf.xacro  common_properties.xacro
