<?xml version="1.0"?>
<package format="2">
  <name>cv</name>
  <version>1.0.0</version>
  <description>
    computer vision project that detection,recognition .
  </description>
  <license>Apache 2.0</license>
  <author email="kkjong@robotis.com">Gilbert</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3_machine_learning</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_machine_learning</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_machine_learning/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
