[tool.poetry]
name = "azure_faceapi"
version = "0.1.0"
description = ""
authors = ["madanfuse <madan@fusemachines.com>"]

[tool.poetry.dependencies]
python = "^3.8"
azure-cognitiveservices-vision-face = "^0.5.0"
azure-cognitiveservices-vision-computervision = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
